# STOCK

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Phase1.md  README.md  README1.md  SETUP_COMPLETE.md  SETUP_DATA_INFRASTRUCTURE.md  TASK.md  TASK4CLAUDE.md  docker-compose.yml  pyproject.toml  setup_kafka_topics.py  setup_minio.py  validate_config.py
.claude/agents/: data-engineering-analyst.md
configs/: data_sources.yaml  kafka_config.yaml
docker/: docker-compose.yml
docker/postgres/: init-multiple-databases.sh
docker/trading/: Dockerfile
jobs/streaming/: spark_streaming_jobs.py
scripts/: demo_data_sources.py  demo_delta_lake_final.py  demo_kafka_streaming.py  final_kafka_demo.py  test_data_sources.py  test_kafka_streaming.py  validate_csv_data.py
sql/: init.sql
src/: __init__.py
src/datalake/: __init__.py  time_travel.py
src/datalake/bronze/: __init__.py  ingestion.py
src/datalake/common/: __init__.py  partitioning.py  quality.py  schemas.py
src/datalake/gold/: __init__.py  analytics.py
src/datalake/silver/: __init__.py  validation.py
src/ingestion/: __init__.py  base.py  ssi_client.py  tcbs_client.py  vietnamese_extractor.py  vnd_direct.py
src/streaming/: consumers.py  producers.py  schema_registry.py
src/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py
tests/unit/: test_logging.py
